Updated seeds file; fixed booking cards; changed light gray font to black (readability); widened photos in booking and listing pages

--- a/app/assets/stylesheets/pages/_listing_show.scss
+++ b/app/assets/stylesheets/pages/_listing_show.scss
@@ -26,7 +26,7 @@
 
 .listing-view__bg {
   /* Full height */
-  height: 25vh;
+  height: 100vh;
 
   /* Center and scale the image nicely */
   background-position: center;
